--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,12 +1,11 @@
 .header {
   padding: 20px 40px;
-  /* padding-left: 40px; */
-  /* height: 60px; */
   box-shadow: 4px 7px 24px 8px rgba(29, 29, 27, 0.11);
+  margin-bottom: 10px;
 }
 
 .linkMenu {
-  margin-right: 30px;
+  margin-left: 40px;
   text-decoration: none;
   font-family: Tahoma, sans-serif;
   font-weight: 550;
