--- a/src/components/MovieDetailsPage/MovieDetailsPage.module.css
+++ b/src/components/MovieDetailsPage/MovieDetailsPage.module.css
@@ -1,4 +1,25 @@
 .descriptionMovie {
 
     display: flex;
+    margin-bottom: 10px;
+}
+
+.detailsPage {
+    margin-left: 30px;
+
+}
+
+.detailsPageInform {
+    border-top: 1px solid rgb(136, 136, 136);
+    border-bottom: 1px solid rgb(136, 136, 136);
+    padding-bottom: 10px;
+}
+
+
+
+.backBtn {
+    display: flex;
+    align-items: center;
+    margin-bottom: 5px;
+
 }
