--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  margin-left: 280px;
+  margin: 0px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -14,4 +14,29 @@ code {
 
 ul {
   list-style: none;
+}
+
+.container {
+  width: 970px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 40px;
+  padding-right: 40px;
+
+}
+
+.mto {
+  margin-top: 0;
+}
+
+.mbo {
+  margin-bottom: 0;
+}
+
+h2 {
+  margin-left: 50px;
+}
+
+.borderTop {
+  border-top: solid #727171 1px;
 }
