--- a/src/index.css
+++ b/src/index.css
@@ -40,3 +40,42 @@ h2 {
 .borderTop {
   border-top: solid #727171 1px;
 }
+
+
+
+.movie__list {
+  display: grid;
+  max-width: calc(100vw - 48px);
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  grid-gap: 10px;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding: 0;
+  list-style: none;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.movie__listItem {
+  display: flex;
+  margin: 0;
+  flex-direction: column;
+  font-size: 20px;
+  font-family: "Roboro";
+  font-weight: 600;
+  text-decoration: none;
+
+}
+
+.movie__img {
+  width: 200px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
+  margin-bottom: 35px;
+}
+
+
+
+.movie__img:hover {
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
