--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,6 @@ ul {
   margin-right: auto;
   padding-left: 40px;
   padding-right: 40px;
-
 }
 
 .mto {
@@ -40,8 +39,6 @@ h2 {
 .borderTop {
   border-top: solid #727171 1px;
 }
-
-
 
 .movie__list {
   display: grid;
@@ -61,21 +58,19 @@ h2 {
   margin: 0;
   flex-direction: column;
   font-size: 20px;
-  font-family: "Roboro";
+  font-family: 'Roboro';
   font-weight: 600;
   text-decoration: none;
-
 }
 
 .movie__img {
   width: 200px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
+  transition: all 0.35s cubic-bezier(0.25, 0.8, 0.25, 1);
   margin-bottom: 35px;
 }
 
-
-
 .movie__img:hover {
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  transform: scale(1.023);
 }
